src/App.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  font-family: "Poppins", sans-serif;
  /* overflow: hidden; */
}
 .navbar {
  display: flex;
  background-color: #090909;
  justify-content: space-between;
  align-items: center;
  height: 80px;
  width: 100%;
  padding: 10px 20px;
  z-index: 1000;
}
.navbar .logo {
  cursor: pointer;
  margin-left: 30px;
}
.navbar .profile {
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  margin-right: 30px;
}
.navbar .profile_pic {
  padding-right: 10px;
  width: 50%;
  height: auto;
}
/*
.page-inactive {
  transition: ease-in-out .6s;
  width: 100%;
  height: 100vh;
  transform: translateY(0);
}
.next-page-active {
  transition: ease-in-out .6s;
  width: 100%;
  height: 100vh;
  transform: translateY(-100%);
}
.prev-page-active {
  transition: ease-in-out .6s;
  width: 100%;
  height: 100vh;
  transform: translateY(0);
}
*/
.campaign-section {
  max-width: 560px;
  height: calc(100% - 700px);
  position: absolute;
  top: 25%;
  left: 20%;
}
 .campaign-section h3 {
width: 560px;
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 16px;
}

.campaign-section h6 {
  font-size: 16px;
  margin: 10px 0;
}
.campaign-section input,
.campaign-section textarea {
  width: 90%;
  background-color: #ffffff;
  border: 1px solid #000;
  border-radius: 5px;
  box-sizing: border-box;
  height: 45px;
  padding: 10px;
  margin-bottom: 39px;
  font-size: 18px;
  font-family: "Poppins", sans-serif;
}
.campaign-section textarea {
  width: 100%;
  height: 120px;
  resize: none;
}
input[type="text"]::placeholder,
textarea::placeholder {
  font-family: "Poppins", sans-serif;
  font-size: 16px;
  color: rgba(0, 0, 0, 0.5);
}
.campaign-section .inactive {
  display: inline-flex;
  flex: 50% 1;
  align-items: center;
  justify-content: center;
  background: rgba(38, 36, 36, 0.5);
  color: #ffffff;
  border: none;
  border-radius: 5px;
  outline: none;
  width: 150px;
  height: 39px;
  padding: 5px 12px;
  font-weight: 500;
  font-family: "Poppins";
  font-size: 16px;
  cursor: pointer;
}
.campaign-section .active {
  display: inline-flex;
  flex: 50%;
  align-items: center;
  justify-content: center;
  color: #ffffff;
  border: none;
  border-radius: 5px;
  outline: none;
  width: 150px;
  height: 39px;
  padding: 10px 15px;
  font-weight: 500;
  font-size: 15px;
  font-family: "Poppins";
  cursor: pointer;
  background-color: #000;
}
.campaign-section span img {
  position: relative;
  width: 50%;
  height: auto;
  margin-left: 10px;
}

.subtitle-container {
  margin-left: 10px;
  opacity: 0.5;
  font-size: 16px;
}
.subtitle-container .left-subtitle {
  font-weight: 700;
}
.arrow-btn-container {
  position: absolute;
  right: 0;
  margin-top: 30px;
  display: flex;
}
.bottom {
  position: absolute;
  right: 0;
  margin-top: 150px;
  display: flex;
}
.arrow-btn-container .active,
.arrow-btn-container .inactive {
  width: 40px;
  height: 40px;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  margin: 0 10px;
}
.arrow-btn-container .active {
  background: #000;
  margin-left: 10px;
  padding: 5px 12px;
}
.arrow-btn-container .inactive {
  background: #262424;
  margin-right: 10px;
  opacity: 0.5;
}
.arrow-btn-container img {
  width: 150%;
  height: auto;
}
.imagePage {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-bottom: 39px;
  border-radius: 5px;
}
.imageContainer {
  display: flex;
}
#image {
  display: none;
}
.addBtn label {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.addBtn {
  width: 70px;
  height: 60px;
  background: rgba(0, 0, 0, 0.2);
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  margin-right: 20px;
  cursor: pointer;
}
.addBtn img {    width: 40px;
  cursor: pointer;
}
.image {
  width: 100%;
  height: auto;
}
.image img {
  width: 60px;
  height: 60px;
  margin: 0 10px 10px;
  border-radius: 5px;
  object-fit: cover;
}
.servicePage {
  margin-bottom: 39px;
}
.optionContainer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 5px;
  border-radius: 10px;
  border: 1px solid #000;
  width: 320px;
  height: 55px;
  max-width: 240px;
  margin: 10px 0;
  cursor: pointer;
  font-size: 15px;
}
.optionContainer > p {
  color: #262424;
  padding: 10px;
}
.option {
  border: 1px solid #000;
  padding: 5px 10px;
  margin: 10px;
  font-weight: 600;
  border-radius: 5px;
}
.option-description {
  margin: 20px 0;
}
.option-description textarea, .option-description input {
  margin-bottom: 0;
}
.option-description .desc {
  height: 100px !important;
  max-width: 560px;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  word-wrap: wrap;
}
.option-value {
  margin-right: auto;
  margin-left: 5px;
  font-weight: 600;
}
.optionActive .option {
  border: 1px solid #fff;
}
.optionContainer img,
.categories-value img {
  width: 10%;
  margin: 10px;
}

.optionActive {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 5px;
  margin: 10px 0;
  border-radius: 10px;
  width: 320px;
  height: 55px;
  max-width: 240px;
  cursor: pointer;
  background-color: #000;
  color: #fff;
}
.platformPage {
  margin-bottom: 39px;
}
.audience-section {
  margin-bottom: 39px;
}
.submit-section {
  margin-bottom: 200px;
}
.preview {
  background: none !important;
  border: 1px solid #000 !important;
  color: #000 !important;
}
.submit {
  background-color: #262424 !important;
  margin-left: 50px !important;
}

.gender-list {
  padding: 15px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  border: 1px solid #000;
  width: 320px;
  max-width: 240px;
  font-weight: 600;
  border-top: none;
  position: relative;
  top: -27px;
}
.gender-list p {
  padding: 10px 0;
  cursor: pointer;
}
/* ... */

